New performance tests for JVM tuning
- all types of GC